--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <h1>Pulling JSON data from an open data API</h1>
+        <p>The following example will pull and display data from the Colorado Business Entity database. Just choose a ZIP code in Colorado and click the button!</p>
         <div class="content">
             Choose: 
             <select>
-
             <option>
             80001		Arvada 	Jefferson 	
 </option><option>
