--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
         <title>Colorado Data Pull Example</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/topcoat/0.8.0/css/topcoat-desktop-light.min.css">
+        <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Fjalla+One|Cantarell:400,400italic,700italic,700" rel="stylesheet" type="text/css" />
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Pulling JSON data from an open data API</h1>
-        <p>The following example will pull and display data from the Colorado Business Entity database. Just choose a ZIP code in Colorado and click the button!</p>
+
         <div class="content">
+        <h1>Pulling JSON data from an open data API</h1>
+       <p>The following example will pull and display data from the Colorado Business Entity database. <br>Just choose a ZIP code in Colorado and click the button! <a href="https://github.com/leemark/co-data-pull">See code on github</a>.</p>
             Choose: 
             <select>
             <option>
@@ -1332,8 +1336,8 @@
 </option><option>
 81658		Vail 	Eagle 	
 </option>
-                </select> <em>(ZIP City County)</em>
-             <button>Let's do this thing!</button>
+                </select> <em>(ZIP City County)</em> 
+             <button class="topcoat-button--cta">Let's do this thing!</button>
         </div>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="js/pull.js"></script>
